<resources>
    <string name="app_name">W2</string>
    <string name="detail">
        "There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc."</string>
    <string name="newsTitle">
        "Breaking News: Elon Musk"</string>
    <string name="button">Bookmark</string>
    <string name="button2">Save</string>
    <string name="TimeSeen">8hrs ago</string>
    <string name="profileName">Gloria Borger</string>
    <string name="profileDesc">Just your average puggo</string>
</resources>
