<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="184dp"
            android:layout_height="161dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/profile"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profile"
            app:layout_constraintTop_toTopOf="@+id/profile"
            app:layout_constraintLeft_toRightOf="@+id/profile"/>

        <TextView
            android:id="@+id/profileDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileDesc"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/profile"
            app:layout_constraintTop_toBottomOf="@+id/profileName"
            app:layout_constraintLeft_toRightOf="@+id/profile" />

        <ScrollView
            android:id="@+id/profileHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="146dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/someTitle"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detail" />

                <TextView
                    android:id="@+id/someDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail" />

            </LinearLayout>
        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>